# temperature

./: .gitignore  CMakeLists.txt  README.md  bigval.c  bigval.h  temperature.c  temperature.h
